# distrofuse

./: CMakeLists.txt  main.c  readme.md
input/: CMakeLists.txt  parser.c  parser.h
package_manager/: CMakeLists.txt  detector.c  detector.h  optimizer.c  optimizer.h
ui/: CMakeLists.txt  ui.c  ui.h
utils/: CMakeLists.txt  silent_exec.c  silent_exec.h  utils.c  utils.h
